@@ -1,6 +1,3 @@
-# -*- coding: utf-8 -*-
-
-import codecs
 import os.path
 import sys
 
@@ -9,6 +6,7 @@ class FileWriter:
     def __init__(self, main_name, opt):
         self.main_name = main_name
         self.opt = opt
+        self.format = opt.output_file_format
         self.fn = ""
         self.f = None
 
@@ -20,10 +18,10 @@ class FileWriter:
         if (os.path.exists(self.fn) and
                 self.opt.action_if_output_file_exists == 'enumerate'):
                 self.fn = enum_filename(self.fn, 2)
-        if self.opt.output_file_format == 'csv':
+        if self.format == 'csv':
             import csv
             self.f = csv.writer(open(self.fn, 'w'), **self.opt.csv_format)
-        elif self.opt.output_file_format == 'excel':
+        elif self.format == 'excel':
             from . import xls
             self.f = xls.Writer(self.fn)
         return self.f
@@ -32,7 +30,8 @@ class FileWriter:
         try:
             if tb is not None:
                 raise IOError
-            self.f.close()
+            if self.format == 'excel':
+                self.f.close()
             sys.stdout.write("Saved '%s'.\n" % self.fn)
             self.opt.save_result['any_saved'] = True
         except IOError:
@@ -53,12 +52,12 @@ def enum_filename(fn, n):
 def read_file(fname):
     """Open file named fname and read its lines into a list"""
     try:
-        f = codecs.open(fname, mode="r", encoding="utf-8", buffering=0)
+        f = open(fname, mode="r", errors="surrogateescape")
         try:
             s = f.readlines()
         finally:
             f.close()
-    except IOError:
-        sys.stdout.write("Error: File not found or unreadable")
-        return 0
+    except (IOError, UnicodeDecodeError):
+        sys.stdout.write("Error: File not found or unreadable\n")
+        return False
     return s
